# AI-Infra-Guard

./: go.mod  go.sum
agent-scan/: requirements.txt
mcp-scan/: pyproject.toml  requirements.txt
